# robotics-software-community

1-temperature-monitor/: README.md  docker-compose.yml
1-temperature-monitor/src/cpp_ws/: Dockerfile  entrypoint.sh
1-temperature-monitor/src/cpp_ws/src/temp_subscriber/: CMakeLists.txt  package.xml
1-temperature-monitor/src/cpp_ws/src/temp_subscriber/src/: subscriber.cpp
1-temperature-monitor/src/python_ws/: Dockerfile  entrypoint.sh
1-temperature-monitor/src/python_ws/src/temp_publisher/: package.xml  setup.cfg  setup.py
1-temperature-monitor/src/python_ws/src/temp_publisher/temp_publisher/: publisher.py
1-temperature-monitor/src/sensor_interface/: CMakeLists.txt  package.xml
1-temperature-monitor/src/sensor_interface/msg/: TempData.msg
